minikube/python-app-deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    # utility for turning docker-compose yamls into something that k8s can work w/
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    # Label used to identify services
    io.kompose.service: python-app
  name: python-app
spec:
  # our deploy will create a single replica set
  replicas: 1
  selector:
    matchLabels:
      # this allows other kube things to find the pods created by this deployment
      io.kompose.service: python-app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: python-app
    spec:
      containers:
        - image: redis_concentration:1.0.0
          # ie this image is local
          imagePullPolicy: Never
          name: python-app
          ports:
            - containerPort: 5000
          resources: {}
        - name: redis
          image: redis:alpine
          ports:
            - containerPort: 6379
      restartPolicy: Always
status: {}
