minikube/python-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    # other kube things can query for this service using this label
    io.kompose.service: python-app
  name: python-app-service
spec:
  ports:
    - protocol: TCP
      # the service will listen for traffic on the cluster on port 5000
      port: 5000
      # and forward to port 5000 in the pod
      targetPort: 5000
  selector:
    # the service will look for pods with this label and forward their traffic 
    io.kompose.service: python-app
status:
  loadBalancer: {}
