minikube/concentration-default-networkpolicy1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: concentration-default
spec:
  # only let pods labeled as concentration-default access each other
  podSelector:
    matchLabels:
      io.kompose.network/concentration-default: "true"
